# aleo-hello

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README_CN.md  program.json
.github/workflows/: ci.yml
client-rust/: CLAUDE.md  Cargo.toml  TROUBLESHOOTING.md
client-rust/src/: core.rs  main.rs  network.rs  query.rs
client-ts/: CLAUDE.md  README.md  TROUBLESHOOTING.md  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
docs/: aleo-rust-client-journey.md
src/: main.leo
tests/: test_hello.leo
